--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,14 @@
 <html>
     <head>
         <title>El titulo del post</title>
-        <link red="stylesheet" href="css/estilos.css" />
+        <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body> 
-        <h1>Aqui vamos a hacer un blig post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>hola jodido mundo</h1>
+                <p>Y este es el parrafo de inicio</p>
+            </div>
+        </div>
     </body>
 </html>
