--- a/blogpost.html
+++ b/blogpost.html
@@ -2,9 +2,13 @@
     <head>
         <title>El titulo del post</title>
         <link rel="stylesheet" href="css/estilos.css" />
+        
     </head>
     <body> 
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>hola jodido mundo</h1>
                 <p>Y este es el parrafo de inicio</p>
