--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,10 @@
             <div id="post">
                 <h1>hola jodido mundo</h1>
                 <p>Y este es el parrafo de inicio</p>
+                <p>Desde ahora estaremos editanto desde 
+                aqui el pie de pagina con todas sus reglas
+                </p>Cuenta ta historia sobre un joven que 
+                tenia mucha suerte </div>
             </div>
         </div>
     </body>
