--- a/blogpost.html
+++ b/blogpost.html
@@ -8,15 +8,15 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog 
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
-                <h1>hola jodido mundo</h1>
+                <h1>hola jodido mundo todo es culpa de gerson</h1>
                 <p>Y este es el parrafo de inicio</p>
-                <p>Desde ahora estaremos editanto desde 
-                aqui el pie de pagina con todas sus reglas
-                </p>Cuenta ta historia sobre un joven que 
-                tenia mucha suerte </div>
+                <p>mucho texto el dia de hoy, a continuación 
+                les cuento como estoy de jodido</p>
+                <p>motivo fue culpa de gerson por no seguir al 
+                pie de la letra</p>
             </div>
         </div>
     </body>
