--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog 
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id="post">
                 <h1>hola jodido mundo</h1>
@@ -16,7 +16,7 @@
                 <p>Desde ahora estaremos editanto desde 
                 aqui el pie de pagina con todas sus reglas
                 </p>Cuenta ta historia sobre un joven que 
-                tenia mucha suerte </div>
+                tenia mucha suerte. eres idiota </div>
             </div>
         </div>
     </body>
