estoy loco por segunda vez

--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
                 les cuento como estoy de jodido</p>
                 <p>motivo fue culpa de gerson por no seguir al 
                 pie de la letra</p>
+                <d1>a continuacion hablaremos de mi vida </d1>
             </div>
         </div>
     </body>
