--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulo del post</title>
+        <title>Hyperblog de Gmax</title>
         <link rel="stylesheet" href="css/estilos.css" />
         
     </head>
@@ -17,6 +17,7 @@
                 les cuento como estoy de jodido</p>
                 <p>motivo fue culpa de gerson por no seguir al 
                 pie de la letra</p>
+                <d1>hoy es un dia de locos</d1>
             </div>
         </div>
     </body>
