--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Hyperblog by life</title>
+        <title>Hyperblog by life 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
         
     </head>
